Barra de Navegação e Cabeçalho

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-    
+    <header>
+        <div class="menu">
+            <div>
+                <p>LocalEventos</p>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#eventos.html">Eventos</a></li>
+                    <li><a href="#sobre.html">Sobre</a></li>
+                    <li><a href="#contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 </body>
 </html>
