--- a/index.html
+++ b/index.html
@@ -22,6 +22,31 @@
                 </ul>
             </nav>
         </div>
+
+        <main>
+            <section class="evento-destaque">
+                <h1>Evento em Destaque</h1> 
+                <div class="evento-info">  
+                    <div class="evento-img" > 
+                        <img src="./img/evento_img_dih.jpg">
+                    </div>
+                    <div class="evento-card">
+                        <h2>Festa de Ano Novo 2023</h2>
+                        <p>Venha celebrar a chegada de 2023 na maior festa de 
+                            ano novo da cidade. Muita animação espera por você, com a presença garantida dos melhores DJs de
+                            Florianópolis e a maior queima de fogos de todos os tempos!
+                        </p>
+                        <p>Data: 31/12/2022</p>
+                        <p>Início às 22:00h</p>
+                        <p>Local: Avenida Beira-Mar, Florianópolis</p>
+                        <p>Valor: R$ 100</p>
+                    </div>
+
+                </div>
+
+            </section>
+        </main> 
+
     </header>
 </body>
 </html>
