Listagem de Eventos

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h1>Evento em Destaque</h1> 
                 <div class="evento-info">  
                     <div class="evento-img" > 
-                        <img src="./img/evento_img_dih.jpg">
+                        <img id="foto-evento" src="./img/evento_img_dih.jpg">
                     </div>
                     <div class="evento-card">
                         <h2>Festa de Ano Novo 2023</h2>
@@ -41,10 +41,50 @@
                         <p>Local: Avenida Beira-Mar, Florianópolis</p>
                         <p>Valor: R$ 100</p>
                     </div>
-
                 </div>
-
             </section>
+
+            <section class="mais-eventos">
+                <h2>Mais Eventos</h2>
+                <ul class="lista-eventos">
+                    <li class="evento1">
+                        <div>
+                            <img src="img/festival_cores.jpg" alt="">
+                        </div>
+                        <h3>Festival Das Cores</h3>
+                        <p>Data: 22/09/2022</p>
+                        <p>Festa para celebrar a chegada da primavera
+                            com show de luzes colorias e cantores renomados
+                        </p>
+                        <p>Valor: R$ 150</p>
+                    </li>
+                    <li class="evento2">
+                        <div>
+                            <img src="img/abertura-parque.jpg" alt="">
+                        </div>
+                        <h3>Abertura do Parque Animado </h3>
+                        <p>Data: 30/10/2022</p>
+                        <p>Venha conhecer a nova sensação da cidade! Garanta o seu ingresso
+                            e venha se divertir como nunca!
+                        </p>
+                        <p>Valor: R$ 60</p>
+                    </li>
+                    <li class="evento3">
+                        <div>
+                            <img src="img/show-yyE.jpg" alt="">
+                        </div>
+                        <h3>Show da Banda YYE</h3>
+                        <p>Data: 08/12/2022</p>
+                        <p> Show internacional da banda mais tocada nos útimos tempos.
+                            YYE espera por você nesse que promere ser o maior show do ano!
+                        </p>
+                        <p>Valor: R$ 250</p>
+                    </li>
+                </ul>
+            </section>
+
+
+
         </main> 
 
     </header>
