--- a/index.html
+++ b/index.html
@@ -83,6 +83,28 @@
                 </ul>
             </section>
 
+            <section class="formulario">
+                <h2>Formulário</h2>
+                <p>Gostaria de receber mais informações? Basta adicionar seu nome e-mail e a informação que
+                    você gostaria de receber que lhe daremos um retorno.
+                </p>
+                <form action="/pagina-processa-dados-do-form" method="post">
+                    <div>
+                        <label for="nome">Nome:</label>
+                        <input type="text" id="nome" />
+                    </div>
+                    <div>
+                        <label for="email">E-mail:</label>
+                        <input type="email" id="email" />
+                    </div>
+                    <div>
+                        <label for="msg">Mensagem:</label>
+                        <textarea id="msg"></textarea>
+                    </div>
+                </form>
+                <button>Enviar</button>
+            </section>
+
 
 
         </main> 
