--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 </ul>
             </nav>
         </div>
+    </header>
 
         <main>
             <section class="evento-destaque">
@@ -104,11 +105,22 @@
                 </form>
                 <button>Enviar</button>
             </section>
-
-
-
         </main> 
 
-    </header>
+        <footer>
+            <div>
+                <h3>Contato</h3>
+                <p>e-mail: localeventos@localeventos.com</p>
+                <p>Telefone: +55 48 999999999</p>
+                <p>Endereço: Rua das Palmeiras, Centro <br> Florianópolis, SC</p>
+            </div>
+            <div>
+            <p class="copyright">
+                Copyright &copy;2021
+            </p>
+            </div>
+        </footer>
+
+    
 </body>
 </html>
