--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <p>Gostaria de receber mais informações? Basta adicionar seu nome e-mail e a informação que
                     você gostaria de receber que lhe daremos um retorno.
                 </p>
-                <form action="/pagina-processa-dados-do-form" method="post">
+                <form id="formulario">
                     <div>
                         <label for="nome">Nome:</label>
                         <input type="text" id="nome" />
@@ -102,8 +102,9 @@
                         <label for="msg">Mensagem:</label>
                         <textarea id="msg"></textarea>
                     </div>
+                    <button>Enviar</button>
                 </form>
-                <button>Enviar</button>
+                
             </section>
         </main> 
 
@@ -121,6 +122,6 @@
             </div>
         </footer>
 
-    
+        <script src="script.js"></script>
 </body>
 </html>
